move output of build to build folder

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ jar {
 }
 
 task jardist(type: Copy) {
-	delete fileTree('dist')
-	destinationDir = file('dist')
+	delete fileTree('build/dist')
+	destinationDir = file('build/dist')
 	from jar
     dependsOn configurations.runtimeClasspath
 	into('libs'){
