--- a/.github/workflows/oereb-web-service-docker.yml
+++ b/.github/workflows/oereb-web-service-docker.yml
@@ -30,5 +30,5 @@ jobs:
           docker images
       - name: Push docker image
         run: |
-          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin && docker push $DOCKER_ACCOUNT/$DOCKER_REPO
+          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin && docker push $DOCKER_ACCOUNT/$DOCKER_REPO && docker push $DOCKER_ACCOUNT/$DOCKER_REPO:1.0.$GITHUB_RUN_NUMBER
         if: ${{ github.ref == 'refs/heads/master' }}  
