--- a/.github/workflows/oereb-web-service-docker.yml
+++ b/.github/workflows/oereb-web-service-docker.yml
@@ -12,25 +12,64 @@ jobs:
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}} 
       GITHUB_RUN_NUMBER: ${{ github.run_number }}
+      VERSION: 2.0.${{ github.run_number }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+
       - uses: actions/cache@v1
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
-      - name: Build with Gradle
-        run: ./gradlew -DDOCKER_ACCOUNT=$DOCKER_ACCOUNT -DDOCKER_REPO=$DOCKER_REPO clean buildImage 
-      - name: Docker images
-        run: |
-          docker images
-      - name: Push docker image
-        run: |
-          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin && docker push $DOCKER_ACCOUNT/$DOCKER_REPO && docker push $DOCKER_ACCOUNT/$DOCKER_REPO:2.0.$GITHUB_RUN_NUMBER
-        if: ${{ github.ref == 'refs/heads/master' }}  
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Build distribution
+        run: ./gradlew clean jardist 
+
+      - name: Set up QEMU for amd64 and arm64
+        uses: docker/setup-qemu-action@27d0a4f181a40b142cce983c5393082c365d1480  # v1.2.0 (2021-10-22)
+        with:
+          platforms: linux/amd64,linux/arm64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@94ab11c41e45d028884a99163086648e898eed25  # v1.6.0 (2021-10-22)
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@3a3bb3a81753dc99f090d24ee7e5343838b73a96  # v3.5.0 (2021-10-22)
+        with:
+          images: ${{ env.DOCKER_ACCOUNT }}/${{ env.DOCKER_REPO }}
+          labels: |
+            org.opencontainers.image.title=${{ env.DOCKER_REPO }}
+            org.opencontainers.image.version=${{ env.VERSION }}
+            org.opencontainers.image.base.name=docker.io/bellsoft/liberica-openjdk-alpine-musl:11.0.14
+          tags: |
+            type=raw,value=${{ env.VERSION }},enable=true,priority=200
+            type=raw,value=2.0,enable=true,priority=200
+            type=raw,value=2,enable=true,priority=200
+            type=raw,value=latest,enable=true,priority=200
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9  # v1.10.0 (2021-10-22)
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+        if: ${{ (github.ref == 'refs/heads/master') && (github.event_name != 'pull_request') && !env.ACT }}
+
+      - name: Multi-platform build and push
+        uses: docker/build-push-action@a66e35b9cbcf4ad0ea91ffcaf7bbad63ad9e0229  # v2.7.0 (2021-10-22)
+        with:
+          platforms: linux/amd64,linux/arm64
+          context: .
+          file: Dockerfile.alpine
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          pull: true
+          push: ${{ (github.ref == 'refs/heads/master') && (github.event_name != 'pull_request') && !env.ACT }}
