--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,30 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE")
+    }
+}
+
 plugins {
   id "java"
   id 'net.nemerosa.versioning' version '2.0.0'
 }
 
+apply plugin: 'org.springframework.boot'
+
 // docker run -p 8080:8080 -d sogis/oereb-web-service
 // docker run -p 8080:8080 -e DBURL=jdbc:postgresql://docker.for.win.localhost/ceis -e DBSCHEMA=oereb -e DBUSR=usr -e DBPWD=pwd  sogis/oereb-web-service
 // docker run -it --rm alpine ping 172.17.0.2
 
-def DOCKER_ACCOUNT = System.getProperty('DOCKER_ACCOUNT','sogis')
-def DOCKER_REPO = System.getProperty('DOCKER_REPO','oereb-web-service')
+//def DOCKER_ACCOUNT = System.getProperty('DOCKER_ACCOUNT','sogis')
+//def DOCKER_REPO = System.getProperty('DOCKER_REPO','oereb-web-service')
 
 repositories {
     mavenLocal()
     mavenCentral()
     jcenter()
-    /*
-    maven {
-        url "http://oss.jfrog.org/artifactory/simple/oss-snapshot-local/"
-    }
-    */
     maven {
         url "http://jars.umleditor.org"
     }
@@ -33,6 +39,7 @@ configurations.all {
 
 dependencies {
     compile group: 'ch.ehi.oereb', name: 'oereb-web-service', version: "2.0.0", changing: true
+    compile("org.springframework.boot:spring-boot-starter-actuator:2.1.4.RELEASE")
 }
 
 
@@ -56,6 +63,9 @@ task jardist(type: Copy) {
         }
     }    
 }
+
+// Docker image wird in/mit GH Action Pipeline erstellt (v.a. wegen ARM64)
+/*
 task buildImage(dependsOn: jardist){
     doLast { task ->
             // https://github.com/nemerosa/versioning
@@ -79,3 +89,5 @@ def getTimestamp() {
     def date = new Date()
     return date.format('yyyy-MM-dd HH:mm:ss')
 }
+*/
+
