--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -5,7 +5,8 @@ COPY build/dist/ /home/oereb-web-service
 RUN cd /home/oereb-web-service && \
     chown -R 1001:0 /home/oereb-web-service && \
     chmod -R g+rw /home/oereb-web-service && \
-    ls -la /home/oereb-web-service
+    ls -la /home/oereb-web-service && \
+    ls -la /home/oereb-web-service/libs
 
 USER 1001
 EXPOSE 8080
