--- a/.github/workflows/oereb-web-service-docker.yml
+++ b/.github/workflows/oereb-web-service-docker.yml
@@ -31,7 +31,8 @@ jobs:
           distribution: 'temurin'
 
       - name: Build distribution
-        run: ./gradlew clean jardist 
+        #run: ./gradlew clean jardist 
+        run: ./gradlew clean bootJar 
 
       - name: Set up QEMU for amd64 and arm64
         uses: docker/setup-qemu-action@27d0a4f181a40b142cce983c5393082c365d1480  # v1.2.0 (2021-10-22)
