--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,18 +1,17 @@
 FROM bellsoft/liberica-openjdk-alpine-musl:11.0.14
 
 WORKDIR /home/oereb-web-service
-COPY build/dist/ /home/oereb-web-service
+COPY build/libs/oereb-web-service-docker.jar /home/oereb-web-service/oereb-web-service-docker.jar
 RUN cd /home/oereb-web-service && \
     chown -R 1001:0 /home/oereb-web-service && \
     chmod -R g+rw /home/oereb-web-service && \
-    ls -la /home/oereb-web-service && \
-    ls -la /home/oereb-web-service/libs
+    ls -la /home/oereb-web-service
 
 USER 1001
 EXPOSE 8080
 #Log4j 2 CVE-2021-44228
 ENV LOG4J_FORMAT_MSG_NO_LOOKUPS=true
-CMD java -XX:MaxRAMPercentage=80.0 -jar libs/oereb-web-service-docker.jar \
+CMD java -XX:MaxRAMPercentage=80.0 -jar oereb-web-service-docker.jar \
   "--spring.datasource.url=${DBURL}" \
   "--spring.datasource.username=${DBUSR}" \
   "--spring.datasource.password=${DBPWD}" \
