--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 plugins {
   id "java"
-  id 'net.nemerosa.versioning' version '2.0.0'
+  //id 'net.nemerosa.versioning' version '2.0.0'
 }
 
 apply plugin: 'org.springframework.boot'
