--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ configurations.all {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator:2.1.4.RELEASE")
-    compile group: 'ch.ehi.oereb', name: 'oereb-web-service', version: "2.0.0", changing: true
+    compile group: 'ch.ehi.oereb', name: 'oereb-web-service', version: "2.0.1-SNAPSHOT", changing: true
 }
 
 /*
