--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 
     resolutionStrategy { 
-        force 'io.github.sogis:pdf4oereb:2.0.60'
+        force 'io.github.sogis:pdf4oereb:2.0.61+'
     }
 }
 
