--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -6,6 +6,8 @@ RUN ln -s /usr/lib/libfontconfig.so.1 /usr/lib/libfontconfig.so && \
     ln -s /lib/libc.musl-x86_64.so.1 /usr/lib/libc.musl-x86_64.so.1
 ENV LD_LIBRARY_PATH /usr/lib
 
+RUN apk add --update ttf-dejavu && rm -rf /var/cache/apk/*
+
 WORKDIR /home/oereb-web-service
 COPY build/libs/oereb-web-service-docker.jar /home/oereb-web-service/oereb-web-service-docker.jar
 RUN cd /home/oereb-web-service && \
