try to fix missing font problem

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,12 +1,12 @@
 FROM bellsoft/liberica-openjdk-alpine-musl:11.0.14
 
-RUN apk add --no-cache fontconfig
-RUN ln -s /usr/lib/libfontconfig.so.1 /usr/lib/libfontconfig.so && \
-    ln -s /lib/libuuid.so.1 /usr/lib/libuuid.so.1 && \
-    ln -s /lib/libc.musl-x86_64.so.1 /usr/lib/libc.musl-x86_64.so.1
-ENV LD_LIBRARY_PATH /usr/lib
+RUN apk add --no-cache fontconfig ttf-dejavu && rm -rf /var/cache/apk/*
+#RUN ln -s /usr/lib/libfontconfig.so.1 /usr/lib/libfontconfig.so && \
+#    ln -s /lib/libuuid.so.1 /usr/lib/libuuid.so.1 && \
+#    ln -s /lib/libc.musl-x86_64.so.1 /usr/lib/libc.musl-x86_64.so.1
+#ENV LD_LIBRARY_PATH /usr/lib
 
-RUN apk add --update ttf-dejavu && rm -rf /var/cache/apk/*
+#RUN apk add --update ttf-dejavu && rm -rf /var/cache/apk/*
 
 WORKDIR /home/oereb-web-service
 COPY build/libs/oereb-web-service-docker.jar /home/oereb-web-service/oereb-web-service-docker.jar
