Add OpenShift template and Jenkinsfile (#4)

--- a/.github/workflows/oereb-web-service-docker.yml
+++ b/.github/workflows/oereb-web-service-docker.yml
@@ -5,6 +5,9 @@ on:
     - cron: "*/30 * * * *"
   workflow_dispatch:
   push:
+    paths-ignore:
+      - 'openshift/**'
+      - '**.md'
 
 jobs:
   build:
