--- a/.github/workflows/oereb-web-service-docker.yml
+++ b/.github/workflows/oereb-web-service-docker.yml
@@ -2,7 +2,7 @@ name: oereb-web-service-docker
 
 on:
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "00 12 * * *"
   workflow_dispatch:
   push:
     paths-ignore:
