--- a/openshift/Jenkinsfile
+++ b/openshift/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
                     if (environment == 'test') {
                         // First wait for previous rollout to finish
                         sh "oc get dc/${appName} -n ${params.NAMESPACE}"
-                        sh "oc rollout status dc/${appName} -n ${params.NAMESPACE}"
+                        sh "oc rollout status dc/${appName} --watch -n ${params.NAMESPACE}"
                         // Update the latest image stream tag
                         sh "oc import-image ${appName}:latest -o name -n ${params.NAMESPACE}"
                     }
@@ -32,7 +32,7 @@ pipeline {
         stage('Wait for rollout to finish') {
             steps {
                 sh "oc get dc/${appName} -n ${params.NAMESPACE}"
-                sh "oc rollout status dc/${appName} -n ${params.NAMESPACE}"
+                sh "oc rollout status dc/${appName} --watch -n ${params.NAMESPACE}"
             }
         }
     }
