--- a/openshift/Jenkinsfile
+++ b/openshift/Jenkinsfile
@@ -3,9 +3,6 @@ def environment = params.NAMESPACE.substring(params.NAMESPACE.lastIndexOf('-') +
 
 pipeline {
     agent any
-    options {
-        timeout(time: 120, unit: 'SECONDS')
-    }
     stages {
         stage('Restart only') {
             when { expression { params.RESTART_ONLY } }
@@ -24,7 +21,7 @@ pipeline {
         }
         stage('Wait for rollout to finish') {
             steps {
-                sh "sleep 2 && oc rollout status dc/${appName} -n ${params.NAMESPACE}"
+                sh "sleep 2 && oc rollout status dc/${appName} --timeout=60s -n ${params.NAMESPACE}"
             }
         }
     }
